<resources>
    <string name="app_name">Remind Me</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="name">Name</string>
    <string name="add_button">add button</string>
    <string name="notes">Reminders</string>
    <string name="back">Back</string>
    <string name="previous">prevous</string>
    <string name="next">next</string>
    <string name="what_s_your_name">What\'s Your Name?</string>
    <string name="ok">Continue</string>
    <string name="month_year">month year</string>
    <string name="greet">Hey Muneeb!</string>
    <string name="pending">Pending\nReminders</string>
    <string name="upcoming_reminders">Upcoming Reminders</string>
    <string name="s">S</string>
    <string name="f">F</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="m">M</string>
    <string name="task_add">task add</string>
    <string name="due">Due:</string>
    <string name="test">test</string>
    <string name="enter_text">Enter Text</string>
    <string name="title">Title</string>
    <string name="_20_08_2024">20/08/2024</string>
    <string name="enter_title">Enter Title</string>
    <string name="note">Note</string>
    <string name="enter_note">Enter Note</string>
    <string name="select_a_due_date">Select a Due Date</string>
    <string name="add_task">Add Task</string>
    <string name="image">image</string>
    <string name="mon_20_aug">Mon 20 Aug</string>
    <string name="today">Today</string>
    <string name="_14_reminders">14 Reminders</string>
    <string name="_14">14</string>
    <string name="total_nreminders">Total\nReminders</string>
    <string name="show_calender">Show Calender</string>
</resources>