<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_salt"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_square_gray"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <!-- Previous Month Button -->
            <ImageButton
                android:id="@+id/previousMonthButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@color/bkg_gray"
                android:contentDescription="@string/previous"
                android:src="@drawable/previous"
                app:tint="@color/red" />

            <!-- Next Month Button -->
            <ImageButton
                android:id="@+id/nextMonthButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@color/bkg_gray"
                android:contentDescription="@string/next"
                android:rotation="180"
                android:src="@drawable/previous"
                app:tint="@color/red" />

            <!-- Calendar Year Month TextView -->
            <TextView
                android:id="@+id/calendarYearMonthText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/month_year"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_square_gray"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_square_left_white"
                android:gravity="center"
                android:text="@string/s"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/m"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/t"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/w"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/t"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/f"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_square_right_white"
                android:gravity="center"
                android:text="@string/s"
                android:textColor="@color/teal_700"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.kizitonwose.calendar.view.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            app:cv_dayViewResource="@layout/calendar_day_layout" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/circular_shape"
            android:contentDescription="@string/add_button"
            android:src="@drawable/plus"
            app:backgroundTint="@color/blackish_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/upcoming_reminders"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:contentDescription="@string/task_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calenderTaskRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
