<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/back"
        android:padding="8dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <EditText
        android:id="@+id/titleEditText"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Title"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:inputType="textCapWords"
        android:maxLines="3"
        android:paddingStart="8dp"
        android:hint="@string/title"
        android:paddingEnd="0dp"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:text="@string/test"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backArrow" />

    <!-- Underline views for title EditText -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_underline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <TextView
        android:id="@+id/dueDateTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:text="@string/due"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/titleEditText"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <TextView
        android:id="@+id/dueDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/_20_08_2024"
        android:textColor="@color/dark_gray"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/dueDateTextView1"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <EditText
        android:id="@+id/taskEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Note"
        android:background="@color/transparent"
        android:breakStrategy="high_quality"
        android:elegantTextHeight="true"
        android:gravity="top"
        android:hint="@string/enter_text"
        android:inputType="textCapSentences|textMultiLine"
        android:lineSpacingExtra="8dp"
        android:overScrollMode="always"
        android:padding="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:paddingBottom="50dp"
        android:scrollbars="vertical"
        android:text="@string/test"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/dueDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/dueDateTextView" />


    <ImageView
        android:id="@+id/tick"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/back"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/check" />

</androidx.constraintlayout.widget.ConstraintLayout>